Update focus when widget changes visibility.

ChromeVox wasn't getting a notification that the focused view changed
when the find bar was hidden. Fix this by firing a focus event whenever
a widget's visibility changes. Existing code already ensures that the
event gets fired on the right view and that no duplicate events are
generated by the time it gets to ChromeVox.

BUG=659813

Review-Url: https://codereview.chromium.org/2456673002
Cr-Commit-Position: refs/heads/master@{#427906}

Former-commit-id: 17670ecf0ddf150c6a16d611e154d184fa6c27a7