ui/views/accessibility/ax_widget_obj_wrapper.h
@@ -32,6 +32,7 @@ class AXWidgetObjWrapper : public AXAuraObjWrapper,
   // WidgetObserver overrides.
   void OnWidgetDestroying(Widget* widget) override;
   void OnWidgetClosing(Widget* widget) override;
+  void OnWidgetVisibilityChanged(Widget*, bool) override;
 
   // WidgetRemovalsObserver overrides.
   void OnWillRemoveView(Widget* widget, View* view) override;
